--- a/content/portfolio/optoacoustic-mode-solver-for-lasers.mdx
+++ b/content/portfolio/optoacoustic-mode-solver-for-lasers.mdx
@@ -10,4 +10,5 @@ techStack: ["Python", "MATLAB"]
 ---
 
 
-At DSO, a defence research laboratory, I developed a Python-based finite element solver to model opto-acoustic interactions in high-powered laser fibres. This tool facilitated the design of fibres with reduced power loss from backscattering and was selected for showcase from a cohort of forty.
+At DSO, a defence research laboratory, I developed a Python-based finite element solver to model opto-acoustic interactions (Brillouin scattering) in high-powered laser fibres.
+This tool facilitated the design of fibres with reduced power loss from backscattering and was selected for showcase from a cohort of forty.
