--- a/content/portfolio/backsim.mdx
+++ b/content/portfolio/backsim.mdx
@@ -12,3 +12,4 @@ techStack: ["Pandas"]
 
 Inspired by the extensibility and clean abstractions in Pytorch-lightning, this is a developer-centric backtester (most others tend to be for traders-turned-developers) that is event driven and aims to allow trading strategies to be backtested as-is relative to its forward tested counterpart.
 It is highly extensible through callback hooks and supports (expects even) models for pricing/slippage, margin management, etc.
+v1 completion postponed to July 2025.
